--- a/screens/consultaAdmin.html
+++ b/screens/consultaAdmin.html
@@ -1,83 +1,113 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Consulta Administradores</title>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" type="text/css" href="../assets/styles/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
-      rel="stylesheet"
-    />
-  </head>
+  <title>Consulta Administradores</title>
 
-  <body>
-    <header class="header-login">
-      <a href="index.html">
-        <article class="left-upper"></article>
+  <link rel="shortcut icon" href="../assets/images/LogoDEM.png" type="image/x-icon">
+  <link rel="stylesheet" type="text/css" href="../assets/styles/consulta.css" />
+  <link rel="stylesheet" type="text/css" href="../assets/styles/style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet" />
+</head>
+
+<body>
+  <header class="header-login">
+    <a href="index.html">
+      <article class="left-upper"></article>
+    </a>
+    <article class="right-upper">
+      <a href="https://mongagua.sp.gov.br/educacao">
+        <aside class="logo-dem"></aside>
       </a>
-      <article class="right-upper">
-        <a href="https://mongagua.sp.gov.br/educacao">
-          <aside class="logo-dem"></aside>
-        </a>
-        <a href="https://mongagua.sp.gov.br/">
-          <aside class="logo-prefeitura"></aside>
-        </a>
-      </article>
-    </header>
-    <main class="main-login">
-      <div class="box-body no-padding">
-        <table class="table table-striped table-hover">
-          <thead>
-            <tr>
-              <th>Nome</th>
-              <th>Email</th>
-              <th>Telefone</th>
-            </tr>
-          </thead>
-          <tbody class="tableBody">
- 
-          </tbody>
-        </table>
-      </div>
+      <a href="https://mongagua.sp.gov.br/">
+        <aside class="logo-prefeitura"></aside>
+      </a>
+    </article>
+  </header>
+  <main class="main-consulta">
+    <div class="box-body no-padding">
+      <table class="table table-striped table-hover">
+        <thead>
+          <tr>
+            <th>Nome</th>
+            <th>Email</th>
+            <th>Telefone</th>
+          </tr>
+        </thead>
+        <tbody class="tableBody">
+          <tr>
+            <td>sadjasdha</td>
+            <td>daasdasddasdadasdadasdadasdadadassdasd</td>
+            <td>fsdfsdfsdff</td>
+          </tr>
+          <tr>
+            <td>sadjasdha</td>
+            <td>daasdasddasdadasdadasdadasdadadassdasd</td>
+            <td>fsdfsdfsdff</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
-    </main>
-    <script>
+    </div>
+  </main>
+  <script>
     function append(parent, el) {
       return parent.appendChild(el);
     }
+    var tabela = document.querySelector("tbody");
+    var linhas = tabela.querySelectorAll("tr");
 
+    for (var i = 0; i < linhas.length; i++) {
+      var linha = linhas[i];
+      linha.addEventListener("click", function () {
+        //Adicionar ao atual
+        selLinha(this, false); //Selecione apenas um
+        //selLinha(this, true); //Selecione quantos quiser
+      });
+    }
+
+    function selLinha(linha, multiplos) {
+      if (!multiplos) {
+        var linhas = linha.parentElement.getElementsByTagName("tr");
+        for (var i = 0; i < linhas.length; i++) {
+          var linha_ = linhas[i];
+          linha_.classList.remove("active");
+        }
+      }
+      linha.classList.toggle('active');
+    }
     const ul = document.querySelector('.tableBody');
     const url = 'http://localhost:3333/api/admin/admin';
 
     fetch(url)
-    .then((resp) => resp.json())
-    .then(function(data) {
-      let professores = data.data;
-      console.log(professores);
-      return professores.map(function(aluno) {
-        let row = document.createElement('tr');
-        let nameField = document.createElement('td');
-        let emailField = document.createElement('td');
-        let telField = document.createElement('td');
-        console.log(aluno);
-        nameField.innerHTML = aluno.nmAdmin
-        emailField.innerHTML = aluno.emailAdmin
-        telField.innerHTML = aluno.telAdmin
-        append(row, nameField);
-        append(row, emailField);
-        append(row, telField);
-        append(ul, row);
+      .then((resp) => resp.json())
+      .then(function (data) {
+        let admin = data.data;
+        console.log(admin);
+        return admin.map(function (admin) {
+          let row = document.createElement('tr');
+          let nameField = document.createElement('td');
+          let emailField = document.createElement('td');
+          let telField = document.createElement('td');
+          nameField.innerHTML = admin.nmAdmin
+          emailField.innerHTML = admin.emailAdmin
+          telField.innerHTML = admin.telAdmin
+          append(row, nameField);
+          append(row, emailField);
+          append(row, telField);
+          append(ul, row);
+        })
       })
-    })
-    .catch(function(error) {
-      console.log(error);
-    });
-    </script>
-  </body>
+      .catch(function (error) {
+        console.log(error);
+      });
+  </script>
+</body>
+
 </html>
