padronizando pags consulta e alterando foto thomas
Co-authored-by: Thomas Bastos <Thomas-DEV7@users.noreply.github.com>

--- a/screens/consultaAlunos.html
+++ b/screens/consultaAlunos.html
@@ -7,6 +7,8 @@
 
     <title>Consulta Alunos</title>
 
+    <link rel="shortcut icon" href="../assets/images/LogoDEM.png" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="../assets/styles/consulta.css" />
     <link rel="stylesheet" type="text/css" href="../assets/styles/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -37,7 +39,7 @@
             <tr>
               <th>Nome</th>
               <th>RA</th>
-              <th>Data De Nascimento</th>
+              <th>Dt. Nasc.</th>
               <th>Email</th>
               <th>Telefone Responsável</th>
               <th>Endereço</th>
