--- a/screens/feed-principal.html
+++ b/screens/feed-principal.html
@@ -31,20 +31,25 @@
   </header>
   <main class="main-feed">
     <section>
-      <div>
-        <div class="sessao">
-          <h1>Olá, Dalva Verardo!</h1> <!-- depois ligar a api e puxará o nome de quem iniciou a sessão -->
-          <div class="link"><a href="#sair">Encerrar sessão</a></div>
-        </div>
-        
-        <h2>Consultar Usuários</h2>
+      <div class="sessao">
+        <h1>Olá, Dalva Verardo!</h1> <!-- depois ligar a api e puxará o nome de quem iniciou a sessão -->
+        <div class="link"><a href="#sair">Encerrar sessão</a></div>
       </div>
-      <div>
+      <div class="info-container">
+        <h2>Cadastrar Usuários</h2>
+        <p>
+          Clicando no primeiro botão, o de cadastro, você poderá inserir novos alunos, professores e administradores no
+          sistema.
+        </p>
+      </div>
+      <div class="info-container">
+        <h2>Consultar Usuários</h2>
         <p>
           Clicando em qualquer um dos botões de consulta, você poderá consultar os dados dos alunos,
           professores ou administradores já cadastrados, além de poder editar e
           excluir seus respectivos dados.
         </p>
+      </div>
     </section>
     <section>
       <div class="btn-consultas">
@@ -55,7 +60,6 @@
       </div>
       </div>
     </section>
-
   </main>
 </body>
 
