--- a/screens/index.html
+++ b/screens/index.html
@@ -49,7 +49,7 @@
           <li><a href="#nosso-projeto">Nosso Projeto</a></li>
           <li><a href='#professores'>Professores</a></li>
           <li><a href="#quem-somos">Quem Somos?</a></li>
-          <li><a href="#participe" class="btn-p">Participe</a></li>
+          <li><a href="login.html" class="btn-p">Login</a></li>
         </div>
       </ul>
     </nav>
@@ -81,8 +81,8 @@
         <aside class="professores">
           <p>Para Professores:</p>
           <ul class="list-links">
-            <li><a href="">Faça Parte</a></li>
-            <li><a href="">Saiba Mais</a></li>
+            <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSee-PuINy5cZKPZbmtbBbVDlngLwx-W9qU5fb4KZJRK3y5v5Q/viewform?usp=sf_link">Faça Parte</a></li>
+            <li><a href="#quem-somos">Saiba Mais</a></li>
             <li><a href="">Acessar Documentação</a></li>
           </ul>
         </aside>
